<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GuezzDaChezz</string>
    <string name="hello_world">Welcome to GuezzDaChezz!</string>
    <string name="action_onemove">One Move</string>
    <string name="action_twomove">Two Move</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_game">GuezzDaChezz</string>
    <string name="action_hint">Hint</string>
    <string name="action_reset">Reset</string>
    <string name="chess_white">White</string>
    <string name="chess_black">Black</string>
    <string name="action_freeplay">Freeplay</string>
    <string name="status_freeplay">Freeplay</string>
    <string name="dialog_select_board">Select the board</string>
    <string name="go">Go!</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_board_select">Board Select</string>
    <string name="title_activity_server_connection">Server Connection</string>
    <string name="caution_experimental">Experimental feature! Use with precaution.</string>
    <string name="hint_ip">IP address</string>
    <string name="action_server">Connect to server</string>
    <string name="divider_of">of</string>
    <string name="action_request_problem">Request a problem</string>
    <string name="action_ping">Ping</string>
    <string name="error_connectivity">Uh-uh-uh, check your connectivity.</string>
    <string name="tip_connection_wait">Trying to connect, please wait…</string>
    <string name="error_connection">Something is wrong with the connection.</string>
    <string name="tip_ping_success">Pong! You can proceed with receiving problems.</string>
    <string name="tip_problem_success">Got a problem, displaying…</string>
    <string name="title_activity_about">About</string>
    <string name="copyright">© 2015 Sir Ckopo</string>
    <string name="action_reset_progress">Reset Progress</string>
    <string name="action_reset_progress_confirm">Press again to confirm</string>
    <string name="action_reset_progress_done">KABOOM!</string>
    <string name="about_text">Personal student project of Mikhail \'Sir Ckopo\' Chekan, made for Samsung IT-School @ Irkutsk, Russia.\n\n
Planned as a part of another my chess project, stay tuned.</string>
    <string name="action_about">About/Settings</string>
    <string name="tip_game_over">Uh-uh-uh, the game is already over.</string>
    <string name="tip_checkmate">Checkmate!!!</string>
    <string name="tip_check">Check!</string>
    <string name="tip_king_attacked">The king is still under attack!</string>
    <string name="dialog_greeting">Problem pack completed! Good job!</string>
    <string name="ok">OK</string>
    <string name="title_activity_custom_layout">Custom Boards</string>
    <string name="action_keeper">Custom Boards</string>
    <string name="action_add_layout">New Board</string>
    <string name="action_play">Play</string>
    <string name="action_edit">Edit</string>
    <string name="action_solve">Solve</string>
    <string name="action_delete">Delete</string>
    <string name="action_rename">Rename</string>
    <string name="title_activity_layout_editor">Layout Editor</string>
    <string name="dialog_name_entry">Please enter the name</string>
    <string name="error_bad_name">Bad board name!</string>
    <string name="error_name_exists">The board \'%s\' already exists!</string>
    <string name="dialog_delete">Are you sure you want to delete</string>
    <string name="chess_moves">moves</string>
    <string name="chess_mates">mates in</string>
    <string name="chess_helpmates">helpmates in</string>
    <string name="action_board_data">Board</string>
    <string name="action_preferences">Preferences</string>
    <string name="chess_move_white">White move</string>
    <string name="chess_move_black">Black move</string>
    <string name="chess_depth_pre">Mate in</string>
    <string name="chess_no_mate">No mate</string>
    <string name="chess_mate_direct">Directmate</string>
    <string name="chess_mate_help">Helpmate</string>
    <string name="action_revert">Revert changes</string>
    <string name="action_import">Import FEN</string>
    <string name="action_export">Export FEN</string>
    <string name="action_save">Save</string>
    <string name="action_clear">Clear</string>
    <string name="dialog_save_exit">Do you want to save \'%s\' before exiting?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="tip_saved">Saved \'%s\'!</string>
    <string name="error_bad_layout">There\'s something wrong with this layout!</string>
    <string name="dialog_export_fen">Get your FEN</string>
    <string name="dialog_import_fen">Import your FEN</string>
    <string name="tip_import">Imported successfully!</string>
    <string name="error_bad_fen">This FEN record is bad or corrupted.</string>
    <string name="error_solve">Couldn\'t solve this layout</string>
    <string name="tip_no_solutions">No solutions</string>
    <string name="tip_solve_wait">Solving. Please, wait...</string>
    <string name="action_write_layout">Write Layout</string>
    <string name="action_copy">Copy</string>
    <string name="tip_solutions">First moves are</string>

</resources>
