<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.sirckopo.guezzdachezz.ServerConnectionActivity">

    <TextView android:text="@string/caution_experimental" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lblTip" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtIP"
        android:layout_below="@+id/lblTip"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/hint_ip"
        android:maxLines="1"
        android:singleLine="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_request_problem"
        android:id="@+id/btnGo"
        android:layout_below="@+id/txtIP"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="getAProblem" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_ping"
        android:id="@+id/btnPing"
        android:layout_below="@+id/btnGo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:nestedScrollingEnabled="false"
        android:onClick="makeAPing" />

</RelativeLayout>
